# mew-dev

./: .cproject  .project  BrokenBuild.md  CMakeCache.txt  CamelCase.md  CodingConventions.md  Control.md  Core.md  Decision.md  Device.md  FrontPage.md  GettingStarted.md  HardwareTeam.md  Localization.md  Motors.md  Movement.md  NeubauTreeStructure.md  Odometric.md  Overview.md  Perception.md  Planning.md  Power.md  ProjectHome.md  ROS.md  SVNHowTo.md  Sensors.md  SoftwareTeam.md  SteeringBehaviours.md  TechnologyOverview.md  UsefulLinks.md  Vision.md  WikiHowTo.md  WorldModelling.md
neubau/: .cproject  .project  ARCHITECTURE  CMakeLists.txt  README
neubau/app/: CMakeLists.txt
neubau/app/electronic/: CMakeLists.txt  TestMotors.cpp
neubau/control/: CMakeLists.txt  control.h  steering.cpp  steering.h  steeringoutput.h
neubau/control/include/: steering.h
neubau/core/: CMakeLists.txt  array.h  core.h  floating.h  kinematic.h  location.h  orientation.h  static.cpp  static.h  steeringoutput.h  stlastar.h  vector2d.h
neubau/device/: CMakeLists.txt  actuator.cpp  actuator.h  actuators.cpp  sensor.cpp  sensor.h  virtualdevices.cpp  virtualdevices.h  virtualsensor.h
neubau/device/include/: actuator.h  actuators.h  sensor.h
neubau/electronic/: CMakeLists.txt  arduino.cpp  arduino.h  main.cpp
neubau/electronic/arduinos/motors/: motors.pde
neubau/electronic/arduinos/sensor/: sensor.pde
neubau/electronic/arduinos/servos/: servos.pde
neubau/electronic/arduinos/udev rules/: readme
neubau/experimental/: CMakeLists.txt  pointsToMovements.cpp
neubau/experimental/coretest/: CMakeLists.txt  VectorPrint.cpp
neubau/experimental/pathfinder/: CMakeLists.txt  findpath.cpp
neubau/experimental/profile/: simpleprofile.h
neubau/experimental/simplecontrol/: CMakeLists.txt  control.c  control.cpp
neubau/experimental/simplecontrol/include/: control.h
neubau/experimental/virtual/: entity.h  virtual.h  virtualperceptor.h  virtualworld.cpp  virtualworld.h
neubau/perception/: CMakeLists.txt  entity.cpp  model.cpp  model.h  perceptor.h
neubau/test/: CMakeLists.txt
neubau/test/control/: CMakeLists.txt  TestControl.cpp  TestSeek.cpp
neubau/test/core/: CMakeLists.txt  TestAStar.cpp  TestStatic.cpp  TestVector2d.cpp
neubau/test/electronic/: CMakeLists.txt  TestArduino.cpp  TestFollowing.cpp  TestMotors.cpp  TestScanning.cpp
neubau/test/experimental/: CMakeLists.txt
neubau/test/experimental/virtual/: CMakeLists.txt  TestVirtual.cpp  TestVirtualWorld.cpp
src/: CMakeLists.txt  README
src/control/include/robot/: basicrobot.h  robot.h
src/control/robot/: CMakeLists.txt  simulatedrobot.cpp
src/control/robot/include/: robot.h
src/controlsystem/include/movement/: actuator.h  behaviour.h
src/controlsystem/movement/: steering.cpp
src/core/: kinematic.cpp  model.cpp  vector2d.h
src/core/include/: core.h  kinematic.h  model.h  robot_state.h  stlastar.h  vector2d.h
src/decision/: strategy.pl
src/decisionsystem/: assembly.pl  movement.pl
src/device/: CMakeLists.txt
src/device/include/: actuator.h  device.h  i2c_devices.h  sensor.h  simulatedlocator.h  simulatedorientator.h
src/devicelayer/include/: actuator.h  i2c_devices.h
src/electronic/: CMakeLists.txt
src/electronic/interface/: arduino.cpp  arduino.h  main.cpp  makefile  sensors.h  test
src/electronic/interfaceV2/: arduino.cpp  main.cpp  test
src/electronicinterface/include/: electronicinterface.h
src/experimental/: CMakeLists.txt
src/experimental/CVtests/: CMakeLists.txt  contourtest.cpp
src/experimental/Robot Arm/: Makefile  robotArm.d  servos.d
src/experimental/pathfinder/: CMakeLists.txt  findpath.cpp  test.cpp
src/experimental/petesimulator/: Common.cpp  Cylinder.cpp  Dispensor.h  Lintel.cpp  README.txt  start.cpp
src/experimental/prologcpp/: SWI-Prolog.h  prolog.cpp
src/experimental/rotary/: Makefile  mouse.c  mouse_encoder.h  test.c
src/experimental/simulator/: main.cpp  simulatedactuator.cpp  simulateddecision.cpp  simulateddevices.cpp  simulatedworld.cpp  simulation.cpp
src/experimental/toddler/: README  toddling.c
src/experimental/toddles/: CMakeLists.txt  findkey  sensors.cpp  toddles.cpp
src/experimental/toddling/: arduino.h  drive_motor.c  mew_i2c.h  stop  toddling  toddling.cpp
src/perception/: model.cpp  perceptor.h
src/perception/include/: entity.h  model.h  perception.h
src/perceptionsystem/include/: gridmodel.h
src/petesimulator/include/: Robot.h
src/simulator/: CMakeLists.txt  simulatedworld.cpp  simulator.cpp
src/simulator/include/: map.h  simulator.h
src/simulator/samples/: CMakeLists.txt
src/simulator/src/: makefile  sample.c
trunk/: .cproject  .project  CMakeLists.txt
trunk/controlsystem/: .cproject  .project  i2c_motor.h
trunk/cvtests/: test.cpp
trunk/experimental/CVtests/: .cproject
trunk/lib/geometry/: geometry.hpp
trunk/simulator/src/: map.h
trunk/src/: CMakeLists.txt  Maple.cpp  README
trunk/src/core/: robot.cpp
trunk/src/decisionsystem/: decisionsystem.pl
trunk/src/device/: actuator.cpp  simulatedlocator.cpp
trunk/src/electronic/: CMakeLists.txt
trunk/src/experimental/: CMakeLists.txt
trunk/src/perception/: entity.cpp  gridmodel.cpp  model.cpp
trunk/src/perceptionsystem/: height_map.cpp
trunk/src/petesimulator/: Robot.cpp
trunk/src/robot/: basicrobot.cpp
trunk/src/simulator/: CMakeLists.txt  makefile  map.cpp  simulator.c
(+666 files in other folders)
